--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+    <link
+      rel="icon"
+      href="https://clipart-library.com/2024/weather-symbols-sun-with-clouds/weather-symbols-sun-with-clouds-0.png"
+    />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
